--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head>
     <!--<link rel="stylesheet" href="/stylesheets/app.min.css">-->
-</head><body style="margin: 0; overflow: hidden;">
+</head><body style="margin: 0; overflow: hidden;"><div style="margin: 0; overflow: hidden;">
 
 <img onclick="myFunction()" src="/HoverElements.svg"
 style="width: 100%; z-index: 1 ;"
@@ -44,7 +44,7 @@ style="width: 100%; z-index: 4; position: absolute; top: 0%; left: 0;"
         height: 120vh;
     ">Einzelfahrschein</p>
 
-    <p id="starttime" style="
+    <p id="starttime" class='page1' style="
         font-family: Calibri;
         font-size: 8vw;
         position: absolute;
@@ -54,7 +54,7 @@ style="width: 100%; z-index: 4; position: absolute; top: 0%; left: 0;"
         z-index: 4;
     ">Test</p>
 
-    <p id="endtime" style="
+    <p id="endtime" class='page1' style="
         font-family: Calibri;
         font-size: 8vw;
         position: absolute;
@@ -64,7 +64,7 @@ style="width: 100%; z-index: 4; position: absolute; top: 0%; left: 0;"
         z-index: 4;
     ">Test</p>
 
-    <p style="
+    <p class='page1' style="
         font-family: Calibri;
         font-size: 8vw;
         position: absolute;
@@ -74,38 +74,38 @@ style="width: 100%; z-index: 4; position: absolute; top: 0%; left: 0;"
         z-index: 4;
     ">4</p>
 
-    <p style="
+    <p class='page1' style="
     font-family: Calibri;
     font-size: 8vw;
     position: absolute;
     left: 1.5vw;
-    top: 61vw;
+    top: 61.5vw;
     margin: 0;
     z-index: 4;
     ">Mannheim, Hauptbahnhof</p>
 
 
-    <p id="namemain1" style="
+    <p class='page1' id="namemain1" style="
     font-family: Calibri;
     font-size: 8vw;
     position: absolute;
     left: 1.5vw;
-    top: 75.5vw;
+    top: 76vw;
     margin: 0;
     z-index: 4;
     "></p>
 
-    <p id="namemain2" style="
+    <p class='page1' id="namemain2" style="
     font-family: Calibri;
     font-size: 8vw;
     position: absolute;
     left: 1.5vw;
-    top: 83.5vw;
+    top: 84vw;
     margin: 0;
     z-index: 4;
     "></p>
 
-    <p id="personenzahl" style="
+    <p class='page1' id="personenzahl" style="
     font-family: Calibri;
     font-size: 8vw;
     position: absolute;
@@ -115,7 +115,7 @@ style="width: 100%; z-index: 4; position: absolute; top: 0%; left: 0;"
     z-index: 4;
     ">1</p>
 
-    <p id="Fahrpreis" style="
+    <p class='page1' id="Fahrpreis" style="
     font-family: Calibri;
     font-size: 8vw;
     position: absolute;
@@ -125,7 +125,7 @@ style="width: 100%; z-index: 4; position: absolute; top: 0%; left: 0;"
     z-index: 4;
     ">4,30 €</p>
 
-    <p id="MwSt" style="
+    <p class='page1' id="MwSt" style="
     font-family: Calibri;
     font-size: 8vw;
     position: absolute;
@@ -178,4 +178,4 @@ style="width: 100%; z-index: 4; position: absolute; top: 0%; left: 0;"
 
 </script>
     
-</body></html>
+</div></body></html>
