--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head>
     <!--<link rel="stylesheet" href="/stylesheets/app.min.css">-->
-</head><body style="margin: 0; overflow: hidden;"><div style="margin: 0; overflow: hidden;">
+</head><body style="margin: 0; overflow: hidden;"><div style="margin: 0; overflow: hidden; position: relative">
 
 <img onclick="myFunction()" src="/HoverElements.svg"
 style="width: 100%; z-index: 1 ;"
