--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head>
     <!--<link rel="stylesheet" href="/stylesheets/app.min.css">-->
-    <meta name="theme-color" content="#673AB6" >
+    <meta name="theme-color" content="#FF2501" >
 </head><body style="margin: 0; overflow: hidden;"><div style="margin: 0; overflow: hidden; position: relative">
 
 <img onclick="myFunction()" src="/HoverElements.svg"
