--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ style="width: 100%; z-index: 5; position: absolute; top: 0%; left: 0; visibility
     top: 61.8vw;
     margin: 0;
     z-index: 4;
-    ">Mannheim, Hauptbahnhof</p>
+    ">Hauptbahnhof, Mannheim</p>
 
 
     <p class='page1' id="namemain1" style="
@@ -212,8 +212,8 @@ style="width: 100%; z-index: 5; position: absolute; top: 0%; left: 0; visibility
 
 
     function backgroundtext() {
-        var name1 = "Ferdinand" //prompt("Name1")
-        var name2 = "Bann" //prompt("Name2")
+        var name1 = prompt("Name1") //"Ferdinand" //
+        var name2 = prompt("Name2") //"Bann" //
         var name = name1 + " " + name2
         var oneline = "Einzelfahrschein / " + mydate + " / " + name + " / 2004935 / " + "Einzelfahrschein / " + mydate + " / " + name + " / 2004935 / ";
         oneline = oneline + oneline + oneline
